--- a/backoffice.html
+++ b/backoffice.html
@@ -90,7 +90,7 @@
                   type="text"
                   class="form-control"
                   required
-                  id="name"
+                  id="monster"
                   aria-describedby="nameHelp"
                   placeholder="Anjanath"
                 />
