Fixed some typos

--- a/backoffice.html
+++ b/backoffice.html
@@ -18,7 +18,7 @@
         data-bs-theme="dark"
       >
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="./homepage.html">
             <img
               src="https://static.wikia.nocookie.net/xenbox/images/2/2d/MH-Guild_Crest.png"
               alt="Logo"
@@ -42,10 +42,18 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="/homepage.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="/backoffice.html"
                   >Backoffice</a
                 >
               </li>
