--- a/backoffice.html
+++ b/backoffice.html
@@ -73,6 +73,7 @@
         </div>
       </nav>
     </header>
+
     <!-- MAIN -->
     <main class="flex-grow-1">
       <h1 class="text-center">Smithy's Forge</h1>
@@ -92,17 +93,7 @@
                   placeholder="Anja Alpha +"
                 />
               </div>
-              <div class="mb-3">
-                <label for="name" class="form-label">Mostro</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  required
-                  id="monster"
-                  aria-describedby="nameHelp"
-                  placeholder="Anjanath"
-                />
-              </div>
+
               <div class="mb-3">
                 <label for="description" class="form-label">Descrizione</label>
                 <textarea
@@ -114,6 +105,31 @@
                   rows="5"
                 ></textarea>
               </div>
+
+              <div class="mb-3">
+                <label for="brand" class="form-label">Mostro</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  required
+                  id="brand"
+                  aria-describedby="brandHelp"
+                  placeholder="Capcom"
+                />
+              </div>
+
+              <div class="mb-3">
+                <label for="imageUrl" class="form-label">Immagine</label>
+                <input
+                  type="url"
+                  class="form-control"
+                  required
+                  id="imageUrl"
+                  aria-describedby="imageUrlHelp"
+                  placeholder="https://example.com/image.jpg"
+                />
+              </div>
+
               <div class="mb-3">
                 <label for="price" class="form-label">Prezzo</label>
                 <input
@@ -125,19 +141,22 @@
                   placeholder="10"
                 />
               </div>
+
               <button type="submit" class="btn btn-danger">Invia</button>
             </form>
           </div>
         </div>
       </div>
     </main>
+
     <!-- FOOTER -->
     <footer class="bg-dark text-center py-3">
       <p class="text-light m-0">
         Diritti riservati alla Gilda -
-        <span class="text-ligh" id="year"></span>
+        <span class="text-light" id="year"></span>
       </p>
     </footer>
+
     <!-- SCRIPT -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
