--- a/details.html
+++ b/details.html
@@ -13,16 +13,115 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header></header>
+    <header>
+      <nav
+        class="navbar navbar-expand-lg bg-body-tertiary"
+        data-bs-theme="dark"
+      >
+        <div class="container-fluid">
+          <a class="navbar-brand" href="./homepage.html">
+            <img
+              src="https://static.wikia.nocookie.net/xenbox/images/2/2d/MH-Guild_Crest.png"
+              alt="Logo"
+              width="30"
+              height="30"
+              class="d-inline-block align-text-top"
+            />
+            Smithy's Forge
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="./homepage.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="./backoffice.html"
+                  >Backoffice</a
+                >
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-danger" type="submit">
+                Search
+              </button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </header>
     <!-- MAIN -->
-    <main></main>
+    <main class="flex-grow-1">
+      <h1 class="text-center">Smithy's Forge</h1>
+      <h2 class="text-center">Dettagli prodotto</h2>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col col-12 col-lg-6 col-md-8">
+            <div class="card">
+              <img
+                src="https://scontent-fco2-1.xx.fbcdn.net/v/t39.30808-6/480172515_8704142783023229_8114210900230606405_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=833d8c&_nc_ohc=SXBC6rdKC9sQ7kNvgG6EdXX&_nc_oc=AdlEhS2ThSxdMYYARx9Eldko1o7Yu6Qp9ttvlHB6DnNLIirw18Fa8Q6hcqw03gfUob4&_nc_zt=23&_nc_ht=scontent-fco2-1.xx&_nc_gid=Rjr2O_C7QIfMDUoP5nLT1A&oh=00_AYHY1vRxthQZ1JFY8ixDvzeXtBdyzI-Lrn9yKC_KO4j4Sw&oe=67E34478"
+                class="card-img-top"
+                alt="prodotto"
+              />
+              <div class="card-body text-center">
+                <h5 class="card-title" id="name">Hammer</h5>
+                <p class="card-text" id="description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Perspiciatis labore doloribus suscipit veniam, deleniti est
+                  nihil doloremque? Aperiam ipsum illum recusandae excepturi
+                  dolores fuga sunt? Ab sint ducimus eos minus.
+                </p>
+                <p class="card-text" id="price"></p>
+                <div class="text-center">
+                  <button onclick="editItem()" class="btn btn-danger">
+                    Modifica
+                  </button>
+                  <button onclick="deleteItem()" class="btn btn-secondary">
+                    Elimina
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <!-- FOOTER -->
-    <footer></footer>
+    <footer class="bg-dark text-center py-3">
+      <p class="text-light m-0">
+        Diritti riservati alla Gilda -
+        <span class="text-ligh" id="year"></span>
+      </p>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="./detaills.html"></script>
+    <script src="./script/details.js"></script>
   </body>
 </html>
