--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <!-- HEADER -->
     <header>
       <nav
@@ -88,7 +88,7 @@
     <footer class="bg-dark text-center py-3">
       <p class="text-light m-0">
         Diritti riservati alla Gilda -
-        <span class="text-ligh" id="year"></span>
+        <span class="text-light" id="year"></span>
       </p>
     </footer>
     <!-- SCRIPT -->
