--- a/backoffice.html
+++ b/backoffice.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="d-flex flex-column min-vh-100">
+  <body class="d-flex flex-column min-vh-100 bg-dark text-light">
     <header>
       <nav
         class="navbar navbar-expand-lg bg-body-tertiary"
