--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="d-flex flex-column min-vh-100">
+  <body class="d-flex flex-column min-vh-100 bg-dark text-light">
     <!-- HEADER -->
     <header>
       <nav
